--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -116,34 +116,7 @@
 
     }
 
-    .color-pallete {
-        position: absolute;
-        box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
-        background-color: #fff;
-        top: 80%;
-        height: 114px;
-        width: 140px;
 
-        .color-picker-wraper {
-            display: flex;
-            flex-wrap: wrap;
-            padding: 8px;
-            grid-gap: 6px;
-            gap: 6px;
-            cursor: pointer;
-
-            .color-picker {
-                width: 20px;
-                height: 20px;
-                border-radius: 50%;
-                transition: all 0.1s ease-in-out;
-
-                &:hover {
-                    filter: grayScale(100%);
-                }
-            }
-        }
-    }
 
     .btns-bottom-modal {
         padding: 3px;
@@ -183,6 +156,33 @@
 
             &:hover {
                 background-color: #e6e9ef;
+            }
+        }
+    }
+}
+
+.color-pallete {
+    // box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
+    background-color: #fff;
+    top: 80%;
+
+
+    .color-picker-wraper {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 8px;
+        grid-gap: 6px;
+        gap: 6px;
+        cursor: pointer;
+
+        .color-picker {
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            transition: all 0.1s ease-in-out;
+
+            &:hover {
+                filter: grayScale(100%);
             }
         }
     }
